--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <h2>문의하기</h2>
             <p>서비스에 대한 궁금한 점이나 상담을 원하시면 아래 연락처로 문의해주세요.</p>
             <div class="contact-info">
-                <p><strong>이메일:</strong> <a href="mailto:tradingfactory777@gmail.com">tradingfactory777@gmail.com</a></p>
-                <p><strong>카카오톡:</strong> ID: tradingfactory / <a href="https://open.kakao.com/o/sPnE2s7g">1:1 오픈카톡방</a></p>
-                <p><strong>크몽:</strong> <a href="https://kmong.com/@TradingFactory">TradingFactory</a></p>
+                <p><strong>이메일:</strong> tradingfactory777@gmail.com</p>
+                <p><strong>카카오톡:</strong> ID: tradingfactory / <a href="https://open.kakao.com/o/sPnE2s7g" target="_blank" rel="noopener noreferrer">1:1 오픈카톡방</a></p>
+                <p><strong>크몽:</strong> <a href="https://kmong.com/@TradingFactory" target="_blank" rel="noopener noreferrer">TradingFactory</a></p>
             </div>
         </section>
     </main>
