--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </footer>
 
     <a href="index.html" class="home-button">HOME</a>
-    <a href="mailto:tradingfactory777@gmail.com" class="fixed-contact-button" target="_blank" rel="noopener noreferrer">
+    <a href="https://open.kakao.com/o/sPnE2s7g" class="fixed-contact-button" target="_blank" rel="noopener noreferrer">
         문의하기
     </a>
 </body>
