--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
                 <a href="project2.html" class="project-item">
                     <h3>프로젝트 2</h3>
-                    <p>설명: 특정 패턴 발생 시 알림을 제공하는 전략 스크립트</p>
+                    <p>설명: 슈퍼트렌드와 추세 반전 패턴을 활용한 매수/매도 지표</p>
                 </a>
                 <a href="project3.html" class="project-item">
                     <h3>프로젝트 3</h3>
@@ -49,7 +49,7 @@
 
                 <a href="indicator_add.html" class="project-item">
                     <h3>트레이딩뷰 사용법</h3>
-                    <p>설명: 지표 추가 방법을 단계별로 설명합니다.</p>
+                    <p>설명: 트레이딩뷰의 기본 사용방법을 단계별로 설명합니다.</p>
                 </a>
                 
             </div>
@@ -76,3 +76,4 @@
     </a>
 </body>
 </html>
+
