--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
                 </a>
                 <a href="project3.html" class="project-item">
                     <h3>프로젝트 3</h3>
-                    <p>설명: 볼린저밴드와 스토캐스틱을 활용한 자동 매매 시스템</p>
+                    <p>설명: 복합 지표와 피라미딩 전략을 결합한 자동 매매 시스템</p>
                 </a>
-
                 <a href="indicator_add.html" class="project-item">
                     <h3>트레이딩뷰 사용법</h3>
                     <p>설명: 트레이딩뷰의 기본 사용방법을 단계별로 설명합니다.</p>
